sql的返回值更精确